<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#BEE1E8"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/penjualan"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/muhammad_reda"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:textSize="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/kode_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etkodeBarang"
        android:inputType="text"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/jumlah_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etjumlahBarang"
        android:inputType="number"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:padding="15dp"
        android:id="@+id/btnHitung"
        android:text="@string/hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvnamaBarang"
        android:padding="15dp"
        android:text="@string/namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvhargaBarang"
        android:padding="15dp"
        android:text="@string/harga_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvtotalHarga"
        android:padding="15dp"
        android:text="@string/total_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvdiscount"
        android:padding="15dp"
        android:text="@string/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvjumlahBayar"
        android:padding="15dp"
        android:text="@string/jumlah_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>