<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="#F0FFFF"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoBulat"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp"
        android:src="@drawable/logobulat" />

    <TextView
        android:layout_below="@+id/logoBulat"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:textSize="15sp"
        android:text="@string/muhammad_reda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_below="@+id/logoBulat"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="clickName"
            android:background="@drawable/tepian"
            android:backgroundTint="#77C0D0F4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailID"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email_id"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="clickEmailID"
            android:background="@drawable/tepian"
            android:backgroundTint="#77C0D0F4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_below="@+id/emailID"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="clickpassword"
            android:background="@drawable/tepian"
            android:backgroundTint="#77C0D0F4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_lock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/confirm_password"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="confirmPassword"
            android:background="@drawable/tepian"
            android:backgroundTint="#77C0D0F4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/enter_mobile"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="enterMobile"
            android:background="@drawable/tepian"
            android:backgroundTint="#77C0D0F4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/gender"
        android:orientation="horizontal"
        android:layout_below="@+id/phone"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/male"
            android:text="@string/male"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#111111"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/female"
            android:text="@string/female"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#111111"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>

    <Button
        android:id="@+id/register"
        android:layout_below="@+id/gender"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/tepian"
        android:layout_marginStart="55dp"
        android:minHeight="0dp"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="65dp"
        />



</RelativeLayout>